some groovy updates

--- a/index.html
+++ b/index.html
@@ -13,23 +13,76 @@
     <div class="logo">BLAMZAGOW</div>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#">HOME</a></li>
+        <li><a href="#">TOYS</a></li>
+        <li><a href="#">TOY STORE</a></li>
+        <li><a href="#">HELP</a></li>
       </ul>
     </nav>
   </header>
   <main>
-    <section class="image-grid">
-      <img src="https://via.placeholder.com/300" alt="Image 1" class="lookatme">
-      <img src="https://via.placeholder.com/300" alt="Image 2" class="lookatme">
-      <img src="https://via.placeholder.com/300" alt="Image 3" class="lookatme">
-      <img src="https://via.placeholder.com/300" alt="Image 4" class="lookatme">
-      <img src="https://via.placeholder.com/300" alt="Image 5" class="lookatme">
-      <img src="https://via.placeholder.com/300" alt="Image 6" class="lookatme">
+    <section class="grid" id="TOYS">
+      <h1 style="width:100%;">TOYS</h1>
+      <div class="grid__cell lookatme">
+        <div class="grid__thumb"><a><img src="images/TOYS/TOY-thumb-16x9_Light-Sanctuary-Dark.png" alt="LSD"></a></div>
+        <div class="grid__metadata">LIGHT SANCTUARY DARK</div>
+        <div class="grid__metadata">VIDEO GAME / COMIC / VISUAL NOVEL / NOVEL</div>
+      </div>
+      <div class="grid__cell lookatme">
+        <div class="grid__thumb"><a><img src="images/TOYS/TOY-thumb-16x9_Light-Sanctuary-Dark.png" alt="LSD"></a></div>
+        <div class="grid__metadata">LIGHT SANCTUARY DARK</div>
+        <div class="grid__metadata">VIDEO GAME / COMIC / VISUAL NOVEL / NOVEL</div>
+      </div>
+      <div class="grid__cell lookatme">
+        <div class="grid__thumb"><a><img src="images/TOYS/TOY-thumb-16x9_Light-Sanctuary-Dark.png" alt="LSD"></a></div>
+        <div class="grid__metadata">LIGHT SANCTUARY DARK</div>
+        <div class="grid__metadata">VIDEO GAME / COMIC / VISUAL NOVEL / NOVEL</div>
+      </div>
+      <div class="grid__cell lookatme">
+        <div class="grid__thumb"><a><img src="images/TOYS/TOY-thumb-16x9_Light-Sanctuary-Dark.png" alt="LSD"></a></div>
+        <div class="grid__metadata">LIGHT SANCTUARY DARK</div>
+        <div class="grid__metadata">VIDEO GAME / COMIC / VISUAL NOVEL / NOVEL</div>
+      </div>
+      <div class="grid__cell lookatme">
+        <div class="grid__thumb"><a><img src="images/TOYS/TOY-thumb-16x9_Light-Sanctuary-Dark.png" alt="LSD"></a></div>
+        <div class="grid__metadata">LIGHT SANCTUARY DARK</div>
+        <div class="grid__metadata">VIDEO GAME / COMIC / VISUAL NOVEL / NOVEL</div>
+      </div>
+      <div class="grid__cell lookatme">
+        <div class="grid__thumb"><a><img src="images/TOYS/TOY-thumb-16x9_Light-Sanctuary-Dark.png" alt="LSD"></a></div>
+        <div class="grid__metadata">LIGHT SANCTUARY DARK</div>
+        <div class="grid__metadata">VIDEO GAME / COMIC / VISUAL NOVEL / NOVEL</div>
+      </div>
+      <div class="grid__cell lookatme">
+        <div class="grid__thumb"><a><img src="images/TOYS/TOY-thumb-16x9_Light-Sanctuary-Dark.png" alt="LSD"></a></div>
+        <div class="grid__metadata">LIGHT SANCTUARY DARK</div>
+        <div class="grid__metadata">VIDEO GAME / COMIC / VISUAL NOVEL / NOVEL</div>
+      </div>
+      <div class="grid__cell lookatme">
+        <div class="grid__thumb"><a><img src="images/TOYS/TOY-thumb-16x9_Light-Sanctuary-Dark.png" alt="LSD"></a></div>
+        <div class="grid__metadata">LIGHT SANCTUARY DARK</div>
+        <div class="grid__metadata">VIDEO GAME / COMIC / VISUAL NOVEL / NOVEL</div>
+      </div>
+      <div class="grid__cell lookatme">
+        <div class="grid__thumb"><a><img src="images/TOYS/TOY-thumb-16x9_Light-Sanctuary-Dark.png" alt="LSD"></a></div>
+        <div class="grid__metadata">LIGHT SANCTUARY DARK</div>
+        <div class="grid__metadata">VIDEO GAME / COMIC / VISUAL NOVEL / NOVEL</div>
+      </div>
+    </section>
+    <section class="bg-dark" id="TOY_STORE">
+      <h1>TOY STORE</h1>
+      <p>Parts of the toy store are still being summoned from the void. Stay tuned.</p>
+    </section>
+    <section class="bg-dark" id="HELP">
+      <h1>BLAM-ZA-WHAT?<br>BLAM-ZA-WHO?!</h1>
+      <p>Blamzagow loves to create toys out of <strong>VOID</strong> energy</p>
     </section>
   </main>
+  <footer>
+    <div class="container">
+      &copy;2024 BLAMZAGOW.com All Rights Reserved
+    </div>
+  </footer>
   <script src="/js/blamzagow.js"></script>
 </body>
 
