--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="logo">BLAMZAGOW</div>
     <nav>
       <ul>
-        <li><a href="#">HOME</a></li>
+        <li class="active"><a href="#">HOME</a></li>
         <li><a href="#">TOYS</a></li>
         <li><a href="#">TOY STORE</a></li>
         <li><a href="#">HELP</a></li>
@@ -26,47 +26,22 @@
       <div class="grid__cell lookatme">
         <div class="grid__thumb"><a><img src="images/TOYS/TOY-thumb-16x9_Light-Sanctuary-Dark.png" alt="LSD"></a></div>
         <div class="grid__metadata">LIGHT SANCTUARY DARK</div>
-        <div class="grid__metadata">VIDEO GAME / COMIC / VISUAL NOVEL / NOVEL</div>
+        <div class="grid__metadata">VIDEO GAME</div>
       </div>
       <div class="grid__cell lookatme">
         <div class="grid__thumb"><a><img src="images/TOYS/TOY-thumb-16x9_Light-Sanctuary-Dark.png" alt="LSD"></a></div>
         <div class="grid__metadata">LIGHT SANCTUARY DARK</div>
-        <div class="grid__metadata">VIDEO GAME / COMIC / VISUAL NOVEL / NOVEL</div>
+        <div class="grid__metadata">COMIC</div>
       </div>
       <div class="grid__cell lookatme">
         <div class="grid__thumb"><a><img src="images/TOYS/TOY-thumb-16x9_Light-Sanctuary-Dark.png" alt="LSD"></a></div>
         <div class="grid__metadata">LIGHT SANCTUARY DARK</div>
-        <div class="grid__metadata">VIDEO GAME / COMIC / VISUAL NOVEL / NOVEL</div>
+        <div class="grid__metadata">VISUAL NOVEL</div>
       </div>
       <div class="grid__cell lookatme">
         <div class="grid__thumb"><a><img src="images/TOYS/TOY-thumb-16x9_Light-Sanctuary-Dark.png" alt="LSD"></a></div>
         <div class="grid__metadata">LIGHT SANCTUARY DARK</div>
-        <div class="grid__metadata">VIDEO GAME / COMIC / VISUAL NOVEL / NOVEL</div>
-      </div>
-      <div class="grid__cell lookatme">
-        <div class="grid__thumb"><a><img src="images/TOYS/TOY-thumb-16x9_Light-Sanctuary-Dark.png" alt="LSD"></a></div>
-        <div class="grid__metadata">LIGHT SANCTUARY DARK</div>
-        <div class="grid__metadata">VIDEO GAME / COMIC / VISUAL NOVEL / NOVEL</div>
-      </div>
-      <div class="grid__cell lookatme">
-        <div class="grid__thumb"><a><img src="images/TOYS/TOY-thumb-16x9_Light-Sanctuary-Dark.png" alt="LSD"></a></div>
-        <div class="grid__metadata">LIGHT SANCTUARY DARK</div>
-        <div class="grid__metadata">VIDEO GAME / COMIC / VISUAL NOVEL / NOVEL</div>
-      </div>
-      <div class="grid__cell lookatme">
-        <div class="grid__thumb"><a><img src="images/TOYS/TOY-thumb-16x9_Light-Sanctuary-Dark.png" alt="LSD"></a></div>
-        <div class="grid__metadata">LIGHT SANCTUARY DARK</div>
-        <div class="grid__metadata">VIDEO GAME / COMIC / VISUAL NOVEL / NOVEL</div>
-      </div>
-      <div class="grid__cell lookatme">
-        <div class="grid__thumb"><a><img src="images/TOYS/TOY-thumb-16x9_Light-Sanctuary-Dark.png" alt="LSD"></a></div>
-        <div class="grid__metadata">LIGHT SANCTUARY DARK</div>
-        <div class="grid__metadata">VIDEO GAME / COMIC / VISUAL NOVEL / NOVEL</div>
-      </div>
-      <div class="grid__cell lookatme">
-        <div class="grid__thumb"><a><img src="images/TOYS/TOY-thumb-16x9_Light-Sanctuary-Dark.png" alt="LSD"></a></div>
-        <div class="grid__metadata">LIGHT SANCTUARY DARK</div>
-        <div class="grid__metadata">VIDEO GAME / COMIC / VISUAL NOVEL / NOVEL</div>
+        <div class="grid__metadata">NOVEL</div>
       </div>
     </section>
     <section class="bg-dark" id="TOY_STORE">
