- update page title - add extra cells

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BLAMZAGOW / VOID ENTITY</title>
+  <title>BLAMZAGOW // TOY MAKER</title>
   <link rel="stylesheet" href="/css/_global.css">
 </head>
 
@@ -23,6 +23,46 @@
   <main>
     <section class="grid" id="TOYS">
       <h1 style="width:100%;">TOYS</h1>
+      <div class="grid__cell lookatme">
+        <div class="grid__thumb"><a><img src="images/TOYS/TOY-thumb-16x9_Light-Sanctuary-Dark.png" alt="LSD"></a></div>
+        <div class="grid__metadata">LIGHT SANCTUARY DARK</div>
+        <div class="grid__metadata">VIDEO GAME</div>
+      </div>
+      <div class="grid__cell lookatme">
+        <div class="grid__thumb"><a><img src="images/TOYS/TOY-thumb-16x9_Light-Sanctuary-Dark.png" alt="LSD"></a></div>
+        <div class="grid__metadata">LIGHT SANCTUARY DARK</div>
+        <div class="grid__metadata">COMIC</div>
+      </div>
+      <div class="grid__cell lookatme">
+        <div class="grid__thumb"><a><img src="images/TOYS/TOY-thumb-16x9_Light-Sanctuary-Dark.png" alt="LSD"></a></div>
+        <div class="grid__metadata">LIGHT SANCTUARY DARK</div>
+        <div class="grid__metadata">VISUAL NOVEL</div>
+      </div>
+      <div class="grid__cell lookatme">
+        <div class="grid__thumb"><a><img src="images/TOYS/TOY-thumb-16x9_Light-Sanctuary-Dark.png" alt="LSD"></a></div>
+        <div class="grid__metadata">LIGHT SANCTUARY DARK</div>
+        <div class="grid__metadata">NOVEL</div>
+      </div>
+      <div class="grid__cell lookatme">
+        <div class="grid__thumb"><a><img src="images/TOYS/TOY-thumb-16x9_Light-Sanctuary-Dark.png" alt="LSD"></a></div>
+        <div class="grid__metadata">LIGHT SANCTUARY DARK</div>
+        <div class="grid__metadata">VIDEO GAME</div>
+      </div>
+      <div class="grid__cell lookatme">
+        <div class="grid__thumb"><a><img src="images/TOYS/TOY-thumb-16x9_Light-Sanctuary-Dark.png" alt="LSD"></a></div>
+        <div class="grid__metadata">LIGHT SANCTUARY DARK</div>
+        <div class="grid__metadata">COMIC</div>
+      </div>
+      <div class="grid__cell lookatme">
+        <div class="grid__thumb"><a><img src="images/TOYS/TOY-thumb-16x9_Light-Sanctuary-Dark.png" alt="LSD"></a></div>
+        <div class="grid__metadata">LIGHT SANCTUARY DARK</div>
+        <div class="grid__metadata">VISUAL NOVEL</div>
+      </div>
+      <div class="grid__cell lookatme">
+        <div class="grid__thumb"><a><img src="images/TOYS/TOY-thumb-16x9_Light-Sanctuary-Dark.png" alt="LSD"></a></div>
+        <div class="grid__metadata">LIGHT SANCTUARY DARK</div>
+        <div class="grid__metadata">NOVEL</div>
+      </div>
       <div class="grid__cell lookatme">
         <div class="grid__thumb"><a><img src="images/TOYS/TOY-thumb-16x9_Light-Sanctuary-Dark.png" alt="LSD"></a></div>
         <div class="grid__metadata">LIGHT SANCTUARY DARK</div>
